kubernetes/manifests/adguard-home/adguard-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-exporter
  namespace: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard-exporter
  template:
    metadata:
      labels:
        app: adguard-exporter
    spec:
      containers:
        - name: adguard-exporter
          image: ebrianne/adguard-exporter:v1.14
          ports:
            - containerPort: 9617
              name: metrics
          resources:
            requests:
              memory: 32Mi
              cpu: 10m
            limits:
              memory: 64Mi
              cpu: 250m
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-exporter
  namespace: adguard
  labels:
    app: adguard-exporter
spec:
  type: ClusterIP
  selector:
    app: adguard-exporter
  ports:
    - port: 9617
      targetPort: 9617
      protocol: TCP
      name: metrics
